<resources>
    <string name="app_name">mChat</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">Đăng Nhập</string>
    <string name="sign_up">Đăng Kí</string>
    <string name="mchat">mChat</string>
    <string name="intro_description">Trải nghiệm - Kết nối mọi người</string>
    <string name="chat">Tin nhắn</string>
    <string name="user">User</string>
    <string name="sign_up_now">Đăng kí ngay</string>
    <string name="password">Mật khẩu</string>
    <string name="full_name">Họ và tên</string>
    <string name="email_adress">Địa chỉ Email</string>
    <string name="notify">Thông báo</string>
    <string name="people">Cộng đồng</string>
    <string name="profile">Cá nhân</string>
    <string name="friends">Friends</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="allow">Allow</string>
    <string name="deny">deny</string>
    <string name="rationale_storage">You need to grant storage permission.</string>
    <string name="storage_app_settings">Please grant storage permission in App Settings</string>
    <string name="logout">Đăng Xuất</string>
    <string name="add_friend">Add Friend</string>
    <string name="request_send"> Send Request</string>
    <string name="accept">Accept</string>
    <string name="remove_friend">Remove Friend</string>
    <string name="decline">Decline</string>
    <string name="send">Gửi</string>
    <string name="copyright">Copyright © 2021 Tí Chuột</string>
    <string name="login_fail">Tên đăng nhập hoặc mật khẩu sai</string>
    <string name="status">Nhập Trạng thái</string>
    <string name="update">Cập Nhật</string>
    <string name="update_status">Cập nhật trạng thái</string>
</resources>